gitops/manifests/docker-registry/docker-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app: docker-registry
    app.kubernetes.io/name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry:2.8
        imagePullPolicy: Always
        ports:
        - containerPort: 5000 # internal port for the app
        # optional to have user/pswd access
        # env:
        # - name: REGISTRY_HTTP_TLS_CERTIFICATE
        #   value: "/certs/tls.crt"
        # - name: REGISTRY_HTTP_TLS_KEY
        #   value: "/certs/tls.key"
        resources: 
          requests:
            memory: "256Mi"  
            cpu: "100m"      
          limits:
            memory: "512Mi"  
            cpu: "500m"    
        volumeMounts:
          # - name: registry-certs
          #   mountPath: "/certs"
          #   readOnly: true
          - name: registry-config
            mountPath: /etc/docker/registry
            subPath: config.yml
          - name: registry-data
            mountPath: /var/lib/registry
            subPath: registry
      volumes:
        # - name: registry-certs
        #   secret:
        #     secretName: registry-cert
        - name: registry-config
          configMap:
            name: docker-registry-config
            items:
              - key: config.yml
                path: config.yml
        - name: registry-data
          persistentVolumeClaim:
            claimName: pvc-docker-registry

---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app.kubernetes.io/name: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 5000 # app listens here
  # type: LoadBalancer # for debugging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  labels:
    app: docker-registry
    app.kubernetes.io/name: docker-registry
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "1000"
spec:
  ingressClassName: nginx
  rules:
  - host: docker-registry.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry
            port:
              number: 80 # or 443
  tls:
  - hosts:
      - docker-registry.${DOMAIN_NAME}
    secretName: letsencrypt-swisshikefinder-com
